--- a/finas/finatic/templates/finatic/lust_page.html
+++ b/finas/finatic/templates/finatic/lust_page.html
@@ -5,7 +5,8 @@
     <title>Lust Page</title>
 </head>
 <body>
-    {% for lustr in %}
+    {% for lustr in lust_page %}
+        <h1>{{ lustr.title }}</h1>
     {%  endfor %}
 </body>
 </html>
