--- a/finas/finatic/templates/finatic/lust_page.html
+++ b/finas/finatic/templates/finatic/lust_page.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Lust Page</title>
-</head>
-<body>
-    {% for lustr in lust_page %}
-        <h1>{{ lustr.title }}</h1>
-    {%  endfor %}
-</body>
-</html>
+{% extends 'base.html %}
+
+{% block title %}{% endblock %}
+
+{}
