--- a/finas/finatic/static/style.css
+++ b/finas/finatic/static/style.css
@@ -8,5 +8,17 @@ h1{
 
 .navbar-brand {
     font-family: 'Pacifico', cursive;
-    font-size: 30px;
+    margin-left: 5vw;
+}
+
+.navbar-nav {
+    justify-content: space-around;
+    width: 40%;
+    margin-right: 4vw;
+}
+
+.navbar-nav .nav-link{
+    font-family: 'Sen', sans-serif;
+    font-size: 20px;
+    letter-spacing: 2px;
 }
