Created a detail page

--- a/finas/finatic/templates/finatic/lust_detail.html
+++ b/finas/finatic/templates/finatic/lust_detail.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Lust Detail</title>
-</head>
-<body>
-    <h1>Lust detail</h1>
-</body>
-</html>
+{%  extends 'base.html' %}
+
+{% block title %}Details{% endblock %}
+
+{% block content %}
+
+
+
+{% endblock %}
