--- a/finas/finatic/templates/finatic/lust_detail.html
+++ b/finas/finatic/templates/finatic/lust_detail.html
@@ -5,5 +5,6 @@
 {% block content %}
 
 <h1>Hoome</h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At atque dolor dolore earum fugiat illum impedit minus molestias natus nobis quibusdam recusandae, soluta, ullam! Ab enim eum mollitia nam reiciendis.</p>
 
 {% endblock %}
