Detailed Page created

--- a/finas/finatic/templates/finatic/lust_detail.html
+++ b/finas/finatic/templates/finatic/lust_detail.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<h1>Hoome</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At atque dolor dolore earum fugiat illum impedit minus molestias natus nobis quibusdam recusandae, soluta, ullam! Ab enim eum mollitia nam reiciendis.</p>
+    <h1>{{ lust_detail.title }}</h1>
+    <p>{{ lust_detail.description }}</p>
 
 {% endblock %}
