--- a/finas/finatic/static/style.css
+++ b/finas/finatic/static/style.css
@@ -33,7 +33,7 @@ img{
   /*display: flex;*/
   /*-ms-flex-wrap: wrap;*/
   /*flex-wrap: wrap;*/
-    display: inline-grid;
+  /*  display: inline-grid;*/
     padding: 0 4px;
     margin: 20px;
     width: 33.3%;
