--- a/finas/finatic/static/style.css
+++ b/finas/finatic/static/style.css
@@ -1,10 +1,7 @@
 *{
     box-sizing: border-box;
-    /*background-color: black;*/
-}
-
-h1{
-    color: blue;
+    margin: 0;
+    padding: 0;
 }
 
 .navbar-brand {
@@ -22,52 +19,5 @@ h1{
     font-family: 'Sen', sans-serif;
     font-size: 20px;
     letter-spacing: 2px;
-}
-
-img{
-    height: 15vw;
-}
-
-.row {
-  /*display: -ms-flexbox;*/
-  /*display: flex;*/
-  /*-ms-flex-wrap: wrap;*/
-  /*flex-wrap: wrap;*/
-  /*  display: inline-grid;*/
-    padding: 0 4px;
-    margin: 20px;
-    width: 33.3%;
-    float: right;
-}
-
-.column {
-  /*-ms-flex: 25%;*/
-  /*flex: 25%;*/
-  /*max-width: 25%;*/
-  padding: 10px;
-    margin: 10px;
-    justify-content: center;
-}
-
-.column img {
-  margin-top: 8px;
-  vertical-align: middle;
-  width: 100%;
-}
-
-@media screen and (max-width: 800px) {
-  .column {
-    /*-ms-flex: 50%;*/
-    flex: 50%;
-    max-width: 50%;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .column {
-    /*-ms-flex: 100%;*/
-    flex: 100%;
-    max-width: 100%;
-  }
 }
 
