--- a/finas/finatic/templates/finatic/lust_page.html
+++ b/finas/finatic/templates/finatic/lust_page.html
@@ -5,7 +5,11 @@
 {% block content %}
 
 {% for lustr in lust_page %}
-
+    <div class="cards">
+        <div class="card card1">
+            <img src="{{ lustr.picture.url }}" alt="">
+        </div>
+    </div>
 {% endfor %}
 
 
