--- a/finas/finatic/templates/finatic/lust_page.html
+++ b/finas/finatic/templates/finatic/lust_page.html
@@ -5,14 +5,16 @@
 {% block content %}
 
 {% for lustr in lust_page %}
-    <div class="cards">
-        <div class="card card1">
-            <div class="container">
-                <img src="{{ lustr.picture.url }}" alt="images">
-            </div>
-            <div class="details">
-                <h3>{{ lustr.title }}</h3>
-                <p>{{ lustr.snippet }}</p>
+    <div class="body">
+        <div class="cards">
+            <div class="card card1">
+                <div class="container">
+                    <img src="{{ lustr.picture.url }}" alt="images">
+                </div>
+                <div class="details">
+                    <h3>{{ lustr.title }}</h3>
+                    <p>{{ lustr.snippet }}</p>
+                </div>
             </div>
         </div>
     </div>
