--- a/finas/finatic/static/style.css
+++ b/finas/finatic/static/style.css
@@ -4,6 +4,11 @@
     padding: 0;
 }
 
+.body{
+    display: grid;
+    place-items: center center;
+}
+
 .navbar-brand {
     font-family: 'Pacifico', cursive;
     margin-left: 5vw;
@@ -20,4 +25,27 @@
     font-size: 20px;
     letter-spacing: 2px;
 }
+
+.cards{
+
+}
+
+.card {
+
+}
+
+img {
+    width: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+
 
