--- a/finas/finatic/static/style.css
+++ b/finas/finatic/static/style.css
@@ -27,15 +27,27 @@
 }
 
 .cards{
-
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    padding: 20px;
+    grid-gap: 40px;
 }
 
 .card {
+    background-color: #1c1b29;
+    border-radius: 20px;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.18);
+}
 
+.container{
+    position: relative;
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
 }
 
 img {
     width: 100%;
+    display: block;
+    border-radius: 20px 20px 0 0;
 }
 
 
