--- a/finas/finatic/static/style.css
+++ b/finas/finatic/static/style.css
@@ -51,11 +51,22 @@ img {
 }
 
 .container:after{
-
+    content: '';
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 20px 20px 0 0;
+    opacity: 0.7;
 }
 
 .card1>.container:after{
-
+    background-image: linear-gradient(
+    135deg,
+    #0100ec,
+    #fb36f4
+    );
 }
 
 
