--- a/finas/finatic/static/style.css
+++ b/finas/finatic/static/style.css
@@ -8,6 +8,7 @@
     display: grid;
     place-items: center center;
     font-family: 'Poppins', sans-serif;
+    font-weight: bold;
 }
 
 .navbar-brand {
@@ -70,7 +71,9 @@ img {
     );
 }
 
-
+.details{
+    padding: 20px 10px;
+}
 
 
 
