--- a/finas/finatic/templates/finatic/lust_page.html
+++ b/finas/finatic/templates/finatic/lust_page.html
@@ -7,7 +7,7 @@
 {% for lustr in lust_page %}
     <div class="body">
         <div class="cards">
-            <div class="card card1">
+            <div class="card cardd">
                 <div class="container">
                     <img src="{{ lustr.picture.url }}" alt="images">
                 </div>
