--- a/finas/finatic/static/style.css
+++ b/finas/finatic/static/style.css
@@ -4,12 +4,6 @@
     padding: 0;
 }
 
-.body{
-    display: grid;
-    place-items: center center;
-    font-family: 'Poppins', sans-serif;
-}
-
 .navbar-brand {
     font-family: 'Pacifico', cursive;
     margin-left: 5vw;
@@ -25,6 +19,13 @@
     font-family: 'Sen', sans-serif;
     font-size: 20px;
     letter-spacing: 2px;
+}
+
+.body{
+    display: grid;
+    place-items: center center;
+    font-family: 'Poppins', sans-serif;
+    height: 100vh;
 }
 
 .cards{
@@ -62,7 +63,7 @@ img {
     opacity: 0.7;
 }
 
-.card1>.container:after{
+.cardd>.container:after{
     background-image: linear-gradient(
     135deg,
     #0100ec,
