--- a/finas/finatic/static/style.css
+++ b/finas/finatic/static/style.css
@@ -63,7 +63,7 @@ img {
     opacity: 0.7;
 }
 
-.cardd>.container:after{
+.card1>.container:after{
     background-image: linear-gradient(
     135deg,
     #0100ec,
