--- a/finas/finatic/static/style.css
+++ b/finas/finatic/static/style.css
@@ -21,73 +21,83 @@
     letter-spacing: 2px;
 }
 
-.body{
-    display: grid;
-    place-items: center center;
-    font-family: 'Poppins', sans-serif;
-    height: 100vh;
-}
+/*.body{*/
+/*    display: grid;*/
+/*    place-items: center center;*/
+/*    font-family: 'Poppins', sans-serif;*/
+/*    height: 100vh;*/
+/*}*/
 
-.cards{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    padding: 20px;
-    grid-gap: 40px;
-}
+/*.cards{*/
+/*    display: grid;*/
+/*    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));*/
+/*    padding: 20px;*/
+/*    grid-gap: 40px;*/
+/*}*/
 
-.card {
-    background-color: #1c1b29;
-    border-radius: 20px;
-    box-shadow: 0 0 30px rgba(0, 0, 0, 0.18);
-}
+/*.card {*/
+/*    background-color: #1c1b29;*/
+/*    border-radius: 20px;*/
+/*    box-shadow: 0 0 30px rgba(0, 0, 0, 0.18);*/
+/*}*/
 
-.container{
-    position: relative;
-    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-}
+/*.container{*/
+/*    position: relative;*/
+/*    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);*/
+/*}*/
 
-img {
-    width: 100%;
-    display: block;
-    border-radius: 20px 20px 0 0;
-}
+/*img {*/
+/*    width: 100%;*/
+/*    display: block;*/
+/*    border-radius: 20px 20px 0 0;*/
+/*}*/
 
-.container:after{
-    content: '';
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    border-radius: 20px 20px 0 0;
-    opacity: 0.7;
-}
+/*.container:after{*/
+/*    content: '';*/
+/*    height: 100%;*/
+/*    width: 100%;*/
+/*    position: absolute;*/
+/*    top: 0;*/
+/*    left: 0;*/
+/*    border-radius: 20px 20px 0 0;*/
+/*    opacity: 0.7;*/
+/*}*/
 
-.card1>.container:after{
-    background-image: linear-gradient(
-    135deg,
-    #0100ec,
-    #fb36f4
-    );
-}
+/*.card1>.container:after{*/
+/*    background-image: linear-gradient(*/
+/*    135deg,*/
+/*    #0100ec,*/
+/*    #fb36f4*/
+/*    );*/
+/*}*/
 
-.details{
-    padding: 20px 10px;
-}
+/*.details{*/
+/*    padding: 20px 10px;*/
+/*}*/
 
-.details>h3{
-    color: black;
-    font-weight: 600;
-    font-size: 1.5rem;
-    margin: 10px 0 15px 0;
-}
+/*.details>h3{*/
+/*    color: black;*/
+/*    font-weight: 600;*/
+/*    font-size: 1.5rem;*/
+/*    margin: 10px 0 15px 0;*/
+/*}*/
 
-.details>p{
-    color: black;
-    font-size: 18px;
-    line-height: 30px;
-    font-weight: 400;
-}
+/*.details>p{*/
+/*    color: black;*/
+/*    font-size: 18px;*/
+/*    line-height: 30px;*/
+/*    font-weight: 400;*/
+/*}*/
+
+
+
+
+
+
+
+
+
+
 
 
 
