--- a/finas/finatic/templates/finatic/lust_page.html
+++ b/finas/finatic/templates/finatic/lust_page.html
@@ -5,19 +5,13 @@
 {% block content %}
 
 {% for lustr in lust_page %}
-    <div class="body">
-        <div class="cards">
-            <div class="card card1">
-                <div class="container">
-                    <img src="{{ lustr.picture.url }}" alt="images">
-                </div>
-                <div class="details">
-                    <h3>{{ lustr.title }}</h3>
-                    <p>{{ lustr.snippet }}</p>
-                </div>
+    <section id="facilities">
+        <div class="container">
+            <div class="title">
+
             </div>
         </div>
-    </div>
+    </section>
 {% endfor %}
 
 
