--- a/finas/finatic/templates/finatic/lust_page.html
+++ b/finas/finatic/templates/finatic/lust_page.html
@@ -14,6 +14,7 @@
                         <div class="card-body">
                             <h3 class="card-title">{{ lustr.title }}</h3>
                             <p class="card-text">{{ lustr.snippet }}</p>
+                            <a href="#">Read More</a>
                         </div>
                     </div>
                 </div>
