--- a/finas/finatic/templates/finatic/lust_page.html
+++ b/finas/finatic/templates/finatic/lust_page.html
@@ -8,7 +8,7 @@
     <section id="facilities">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-sm-4 col-md-3">
                     <div class="card text-center">
                         <img src="{{ lustr.picture.url }}" alt="image" class="card-img-top">
                         <div class="card-body">
