--- a/finas/finatic/templates/finatic/lust_page.html
+++ b/finas/finatic/templates/finatic/lust_page.html
@@ -6,9 +6,9 @@
 
 {% for lustr in lust_page %}
     <section id="facilities">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
-                <div class="col-md-4 col-lg-2">
+                <div class="col-md-4">
                     <div class="card text-center">
                         <img src="{{ lustr.picture.url }}" alt="image" class="card-img-top">
                         <div class="card-body">
