--- a/finas/finatic/templates/finatic/lust_page.html
+++ b/finas/finatic/templates/finatic/lust_page.html
@@ -6,7 +6,7 @@
 
 {% for lustr in lust_page %}
     <section id="facilities">
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
                 <div class="col-md-4">
                     <div class="card text-center">
