--- a/finas/finatic/templates/finatic/lust_page.html
+++ b/finas/finatic/templates/finatic/lust_page.html
@@ -5,23 +5,23 @@
 {% block content %}
 
 
-        <div class="container">
-            <div class="row">
-                {% for lustr in lust_page %}
-                <div class="col-md-4">
-                    <div class="card text-center">
-                        <img src="{{ lustr.picture.url }}" alt="image" class="card-img-top">
-                        <div class="card-body">
-                            <h3 class="card-title">{{ lustr.title }}</h3>
-                            <p class="card-text">{{ lustr.snippet }}</p>
-                            <a href="#">Read More</a>
-                        </div>
-                    </div>
+<div class="container">
+    <div class="row">
+        {% for lustr in lust_page %}
+        <div class="col-md-4">
+            <div class="card text-center">
+                <img src="{{ lustr.picture.url }}" alt="image" class="card-img-top">
+                <div class="card-body">
+                    <h3 class="card-title">{{ lustr.title }}</h3>
+                    <p class="card-name">{{ lustr.date | date:'M d Y' }}</p>
+                    <p class="card-text">{{ lustr.snippet }}</p>
+                    <a href="#">Read More</a>
                 </div>
-                {% endfor %}
             </div>
         </div>
-
+        {% endfor %}
+    </div>
+</div>
 
 
 {% endblock %}
