--- a/finas/finatic/templates/finatic/lust_page.html
+++ b/finas/finatic/templates/finatic/lust_page.html
@@ -15,7 +15,7 @@
                     <h3 class="card-title">{{ lustr.title }}</h3>
                     <p class="card-name">{{ lustr.date | date:'M d Y' }} - {{ lustr.time }}</p>
                     <p class="card-text">{{ lustr.snippet }}</p>
-                    <a href="{% url 'finatic:detail' lust_detail.slug %}">Read More</a>
+                    <a href="{% url 'finatic:detail' lustr.slug %}">Read More</a>
                 </div>
             </div>
         </div>
