--- a/finas/finatic/static/style.css
+++ b/finas/finatic/static/style.css
@@ -29,6 +29,8 @@
 .card-body a{
     text-decoration: none;
     margin-top: auto;
+    border: 1px solid black;
+    padding: 10px;
 }
 .card{
     margin: 20px 10px;
