--- a/finas/finatic/static/style.css
+++ b/finas/finatic/static/style.css
@@ -27,18 +27,25 @@
 
 
 .card-body a{
+    font-family: 'Poppins', 'sans-serif';
+    font-weight: bold;
     text-decoration: none;
     margin-top: auto;
-    border: 1px solid black;
     padding: 10px;
+    border-radius: 5px;
+    background-color: #7c7cbf;
+    border: none;
+    color: white;
 }
 .card{
     margin: 20px 10px;
 }
 
-
-
-
+.card-body a:hover{
+    transition: 0.5s ease-in;
+    color: white;
+    background-color: #e5d113;
+}
 
 
 
