--- a/finas/finatic/static/style.css
+++ b/finas/finatic/static/style.css
@@ -27,7 +27,8 @@
 
 
 .card-body a{
-    font-family: 'Poppins', 'sans-serif';
+    font-family: 'Roboto', 'sans-serif';
+    letter-spacing: 1.5px;
     font-weight: bold;
     text-decoration: none;
     margin-top: auto;
