--- a/finas/finatic/static/style.css
+++ b/finas/finatic/static/style.css
@@ -25,9 +25,13 @@
     box-shadow: 0 0 20px 7px rgba(0, 0, 0, 0.1);
 }
 
+.card-title{
+    font-family: 'Rubik', 'sans-serif';
+    font-weight: bold;
+}
 
 .card-body a{
-    font-family: 'Roboto', 'sans-serif';
+    font-family: 'Open Sans', 'sans-serif';
     letter-spacing: 1.5px;
     font-weight: bold;
     text-decoration: none;
