--- a/finas/finatic/static/style.css
+++ b/finas/finatic/static/style.css
@@ -30,10 +30,17 @@
     font-weight: bold;
 }
 
+.card-text{
+    font-family: 'Raleway', 'sans-serif';
+}
+
+.card-name{
+    font-family: 'Raleway', 'sans-serif';
+}
+
 .card-body a{
-    font-family: 'Open Sans', 'sans-serif';
+    font-family: 'Rubik', 'sans-serif';
     letter-spacing: 1.5px;
-    font-weight: bold;
     text-decoration: none;
     margin-top: auto;
     padding: 10px;
