--- a/finas/finatic/templates/finatic/lust_detail.html
+++ b/finas/finatic/templates/finatic/lust_detail.html
@@ -4,12 +4,22 @@
 
 {% block content %}
 
-<div class="card" style="width: 18rem;">
-    <img class="card-img-top" src="{{ lust_detail.picture.url }}" alt="Card image cap">
-    <div class="card-body">
-        <h5 class="card-title">{{ lust_detail.title }}</h5>
-        <p class="card-text">{{ lust_detail.description }}</p>
+<!--<div class="card" style="width: 18rem;">-->
+<!--    <img class="card-img-top" src="{{ lust_detail.picture.url }}" alt="Card image cap">-->
+<!--    <div class="card-body">-->
+<!--        <h5 class="card-title">{{ lust_detail.title }}</h5>-->
+<!--        <p class="card-text">{{ lust_detail.description }}</p>-->
+<!--    </div>-->
+<!--</div>-->
+   <div class="col-md-5 mt-5 mx-auto">
+        <div class="card mb-4">
+            <img src="{{ lust_detail.picture.url }}" alt="">
+          <div class="card-body">
+            <h1 class="card-title">{{ lust_detail.title }}</h1>
+              <p class="card-text text-muted h6">{{ lust_detail.date | date:'M d Y' }} | {{ lust_detail.time }}</p>
+            <p class="card-text" id="jff">{{ lust_detail.description | safe }}</p>
+          </div>
+        </div>
     </div>
-</div>
 
 {% endblock %}
