--- a/finas/finatic/templates/finatic/lust_page.html
+++ b/finas/finatic/templates/finatic/lust_page.html
@@ -13,6 +13,7 @@
                 <img src="{{ lustr.picture.url }}" alt="image" class="card-img-top">
                 <div class="card-body">
                     <h3 class="card-title">{{ lustr.title }}</h3>
+                    <p class="card-name">Published by: {{ lustr.author }}</p>
                     <p class="card-name">{{ lustr.date | date:'M d Y' }} - {{ lustr.time }}</p>
                     <p class="card-text">{{ lustr.snippet }}</p>
                     <a href="{% url 'finatic:detail' lustr.slug %}" class="card-link">Read More &raquo;</a>
