--- a/finas/templates/base.html
+++ b/finas/templates/base.html
@@ -26,7 +26,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item text-black font-weight-bold">
-                            <a class="nav-link" href="#">Create Lustr</a>
+                            <a class="nav-link" href="{% url 'finatic:create' %}">Create Lustr</a>
                         </li>
                         <li class="nav-item text-black font-weight-bold">
                             <a class="nav-link" href="#">FAQs</a>
