--- a/finas/templates/base.html
+++ b/finas/templates/base.html
@@ -18,7 +18,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow" id="mainNav">
             <div class="container-fluid">
-                <a class="navbar-brand" href="{% url 'finatic:list' %}" style="font-size: 1.7vw">Lustras</a>
+                <a class="navbar-brand" href="{% url 'finatic:list' %}" style="font-size: 30px">Lustras</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                     aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -26,7 +26,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item text-black font-weight-bold">
-                            <a class="nav-link" href="{% url 'finatic:create' %}">Create Lustr</a>
+                            <a class="nav-link" href="{% url 'finatic:create' %}">Add Lustr</a>
                         </li>
                         <li class="nav-item text-black font-weight-bold">
                             <a class="nav-link" href="#">FAQs</a>
