--- a/finas/finatic/templates/finatic/lust_page.html
+++ b/finas/finatic/templates/finatic/lust_page.html
@@ -17,7 +17,7 @@
                     <p class="card-name">{{ lustr.date | date:'M d Y' }} - {{ lustr.time }}</p>
                     <p class="card-text">{{ lustr.snippet }}</p>
                     <a href="{% url 'finatic:detail' lustr.slug %}" class="card-link">Read More &raquo;</a>
-                    <a href="#" class="card-link" style="background-color: red">Delete &raquo;</a>
+                    <a href="{% url 'finatic:delete' lustr.slug %}" class="card-link" style="background-color: red">Delete &raquo;</a>
                 </div>
             </div>
         </div>
