--- a/finas/finatic/templates/finatic/form_template.html
+++ b/finas/finatic/templates/finatic/form_template.html
@@ -1,8 +1,18 @@
+<!--{% for field in form %}-->
+
+<!--<span>{{ field.errors }}</span>-->
+
+<!--<label for="">{{ field.label_tag }}</label>-->
+<!--<div>{{ field }}</div>-->
+
+<!--{% endfor %}-->
+
 {% for field in form %}
-
-<span>{{ field.errors }}</span>
-
-<label for="">{{ field.label_tag }}</label>
-<div>{{ field }}</div>
-
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            <span class="text-danger small">{{ field.errors }}</span>
+        </div>
+        <label class="control-label col-sm-2" for="">{{ field.label_tag }}</label>
+        <div class="col-sm-10">{{ field }}</div>
+    </div>
 {% endfor %}
