--- a/finas/finatic/templates/finatic/lust_form.html
+++ b/finas/finatic/templates/finatic/lust_form.html
@@ -2,33 +2,16 @@
 
 {% block content %}
 
-<div class="row">
-    <div class="col-sm-12 col-md-7">
-        <div class="panel panel-default">
-            <div class="panel-body">
-
-                <form action="" method="post" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    {% include 'finatic/form_template.html' %}
-                    <div class="form-group">
-                        <div class="col-sm-offset-2 col-sm-10">
-                            <button class="btn btn-success">Submit</button>
-                        </div>
-                    </div>
-
-                </form>
-
-            </div>
+<form action="" method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    {% include 'finatic/form_template.html' %}
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            <button class="btn btn-primary">Submit</button>
         </div>
     </div>
-</div>
+
+</form>
+
 
 {% endblock %}
-
-<!--<form action="" method="post" enctype="multipart/form-data">-->
-<!--    {% csrf_token %}-->
-<!--    {% include 'finatic/form_template.html' %}-->
-
-
-<!--    <button type="submit">Submit</button>-->
-<!--</form>-->
